Corrected Toggle, Captions and youtube video

--- a/themes/PaperMod/assets/css/common/post-single.css
+++ b/themes/PaperMod/assets/css/common/post-single.css
@@ -301,6 +301,7 @@
     background: var(--code-bg);
     border-radius: var(--radius);
     padding: 0.4em;
+    font-weight: normal;
 }
 
 .dark .toc {
