--- a/themes/PaperMod/assets/css/common/post-single.css
+++ b/themes/PaperMod/assets/css/common/post-single.css
@@ -495,6 +495,8 @@ h6:hover .anchor {
     border-radius: 4px;
     padding: 15px 15px 15px 18px;
     margin-bottom: 10px;
+    border: 1px solid var(--border);
+    background: var(--code-bg);
 }
 
 /* Additional styles for the content within the box */
